--- a/event.html
+++ b/event.html
@@ -30,8 +30,10 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     <!-- Owl Carousel CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"/>
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css" />
 
     <!-- Owl Carousel JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
@@ -72,8 +74,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar sticky-top navbar-expand-lg">
         <a class="navbar-brand" href="#">
-            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top"
-                alt="Mtendere Logo">
+            <img src="assets/imgs/Mtendere_Logo.png" class="d-inline-block align-top" alt="Mtendere Logo">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
             aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -541,6 +542,288 @@
     </div>
     <!-- Video Gallery End -->
 
+    <!-- Custom Section Start -->
+    <section>
+        <div class="custom container-fluid">
+
+
+            <div class="row justify-content-center">
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/custom1.jpg
+                        " class="img-fluid" alt="">
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <h6>Have fun</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae temporibus, blanditiis
+                        facilis eum quae, asperiores iusto deserunt eaque dolorem voluptate delectus libero saepe non
+                        obcaecati veniam, vel tempore quia reiciendis? <br><br>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Similique voluptatibus est doloribus vero sapiente, tempora voluptate autem
+                        deserunt perspiciatis accusamus nam dignissimos laboriosam atque recusandae quibusdam ullam
+                        numquam eligendi voluptatem?</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/custom2.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+
+
+            </div>
+
+            <!-- Second Row -->
+            <div class="row justify-content-center">
+
+                <div class="col-sm-4">
+                    <h6>Great Speaker</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae temporibus, blanditiis
+                        facilis eum quae, asperiores iusto deserunt eaque dolorem voluptate delectus libero saepe non
+                        obcaecati veniam, vel tempore quia reiciendis? <br><br>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Similique voluptatibus est doloribus vero sapiente, tempora voluptate autem
+                        deserunt perspiciatis accusamus nam dignissimos laboriosam atque recusandae quibusdam ullam
+                        numquam eligendi voluptatem?</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/custom3.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <h6>Great knowledge</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae temporibus, blanditiis
+                        facilis eum quae, asperiores iusto deserunt eaque dolorem voluptate delectus libero saepe non
+                        obcaecati veniam, vel tempore quia reiciendis? <br><br>Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Similique voluptatibus est doloribus vero sapiente, tempora voluptate autem
+                        deserunt perspiciatis accusamus nam dignissimos laboriosam atque recusandae quibusdam ullam
+                        numquam eligendi voluptatem?</p>
+                    <a href="#">Learn More</a>
+                </div>
+
+
+            </div>
+
+
+            <!-- Third Row -->
+
+            <div class="row third_row">
+                <h6>Build Your Great <span>Personality</span> </h6>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+
+
+
+
+        </div>
+
+
+
+    </section>
+    <!-- Custom Section End -->
+
+    <!-- Second Header Start -->
+    <section>
+        <div class="second_header">
+            <div>
+                <div class="img">
+                    <img src="images/second_header.jpg" class="img-fluid" alt="">
+                    <div class="Overlay"></div>
+                </div>
+                <div class="SecondHeaderContent">
+                    <h6>Conference Start in</h6>
+                    <p id="counter1"></p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Second Header End -->
+
+
+    <!-- Join The Event -->
+    <section>
+        <div class="join container">
+            <div class="row justify-content-center">
+
+                <div class="col-sm-5">
+                    <div class="box">
+                        <img src="assets/imgs/Students on Campus with Branded Jerseys.jpg" class="img-fluid" alt="">
+                    </div>
+                </div>
+
+                <div class="col-sm-5">
+                    <h6>Join Event</h6>
+                    <h5>We Create And Turn Into <span>Reality</span></h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat doloribus minus aliquid
+                        explicabo nobis, quod molestiae dicta assumenda. Aperiam deserunt error molestiae perferendis
+                        officiis, quos atque id nulla vel illo! <br><br>Lorem ipsum dolor sit, amet consectetur
+                        adipisicing elit. Inventore, adipisci quam laudantium dolorem sapiente consequuntur voluptates
+                        explicabo dolorum nemo minus. Enim dolorem deserunt repellat eveniet veniam, quasi ut? Ea,
+                        atque. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, delectus labore!
+                        Veritatis earum debitis, eos qui hic minima quia quibusdam optio, a perspiciatis fugiat!
+                        Distinctio harum beatae totam laudantium numquam?</p>
+                    <button class="btn">Read More</button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- Join The Event -->
+
+
+    <!-- Speaker Section Start -->
+    <section>
+        <div class="speaker container">
+            <div class="content">
+
+                <h6>Listen To Our Speakers</h6>
+                <h5>Who's Speaking</h5>
+
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="assets/imgs/team/Brend tawina.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Andrews</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="assets/imgs/team/dr. daniel.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Andrews</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/EventSpeaker3.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Andrews</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Second -->
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/EventSpeaker4.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Andrews</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/EventSpeaker5.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Andrews</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="assets/imgs/team/george.jpg" class="img-fluid" alt="">
+                        <div class="Overlay"></div>
+                        <div class="boxContent">
+                            <h6>Aman</h6>
+                            <h5>Founder & CEO</h5>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+
+        </div>
+    </section>
+    <!-- Speaker Section End -->
+
+    <!-- Our News Section Start -->
+    <section>
+        <div class="news container">
+            <div class="content">
+
+                <h6>News Update</h6>
+                <h5>Our Latest News</h5>
+
+            </div>
+
+            <div class="row">
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/news1.jpg" class="img-fluid" alt="">
+                        <div class="boxContent">
+                            <h6>How To Make Complete Website</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut debitis iure reprehenderit,
+                                odit ad eum.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-4 mid">
+                    <div class="box">
+                        <img src="images/news2.jpg" class="img-fluid" alt="">
+                        <div class="boxContent">
+                            <h6>How To Make Complete Website</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut debitis iure reprehenderit,
+                                odit ad eum.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="col-sm-4">
+                    <div class="box">
+                        <img src="images/news3.jpg" class="img-fluid" alt="">
+                        <div class="boxContent">
+                            <h6>How To Make Complete Website</h6>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut debitis iure reprehenderit,
+                                odit ad eum.</p>
+                            <a href="#">Read More</a>
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+    </section>
+    <!-- Our News Section End -->
+
     <!-- Call to Action -->
     <div class="call-to-action text-center">
         <h3>Ready to join Mtendere?</h3>
@@ -638,29 +921,26 @@
                     <div class="widget">
                         <h5 class="fw-bold">Gallery</h5>
                         <ul class="instafeed instagram-gallery list-unstyled">
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team"
-                                        width="72" height="72"></a>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250324-WA0020.jpg" alt="team" width="72" height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission"
-                                        width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Internationalstudies.jpg"
-                                        alt="application" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Events-3.jpg" alt="departure" width="72"
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250321-WA0139.jpg" alt="admission" width="72"
                                         height="72"></a>
                             </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/IMG-20250321-WA0138.jpg"
-                                        alt="Scholarships" width="72" height="72"></a>
-                            </li>
-                            <li><a class="instagram-item" href="#"
-                                    data-fancybox="gal"><img src="assets/imgs/Event-1.jpg" alt="Branding" width="72"
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Internationalstudies.jpg" alt="application" width="72"
                                         height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Events-3.jpg" alt="departure" width="72" height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/IMG-20250321-WA0138.jpg" alt="Scholarships" width="72"
+                                        height="72"></a>
+                            </li>
+                            <li><a class="instagram-item" href="#" data-fancybox="gal"><img
+                                        src="assets/imgs/Event-1.jpg" alt="Branding" width="72" height="72"></a>
                             </li>
                         </ul>
                     </div> <!-- /.widget -->
