--- a/event.html
+++ b/event.html
@@ -132,7 +132,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/event 4.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/Events/IMG-20221029-WA0058-1.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white fw-bold rounded d-inline-block position-absolute p-2"
                                 style="top: 0; right: 0;">MAY 10</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
@@ -155,7 +155,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/Events 2.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/IMG-20250324-WA0027.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white rounded d-inline-block position-absolute p-2"
                                 style="top: 0; right: 0;">JUN 05</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
@@ -202,7 +202,7 @@
                 <div class="col-md-6 col-lg-4 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
                     <div class="event-item rounded">
                         <div class="position-relative">
-                            <img src="assets/imgs/Event 1.jpg" class="img-fluid rounded-top w-100" alt="Image">
+                            <img src="assets/imgs/IMG-20250321-WA0136.jpg" class="img-fluid rounded-top w-100" alt="Image">
                             <div class="bg-primary text-white rounded d-inline-block position-absolute p-2"
                                 style="top: 0; right: 0;">AUG 20</div>
                             <div class="d-flex justify-content-between border-start border-end bg-white px-2 py-2 w-100 position-absolute"
@@ -227,7 +227,7 @@
     <!-- Events End -->
 
     <!-- Events Section Start -->
-    <section id="events" class="events py-5 bg-light">
+    <section id="events" class="events py-5">
         <div class="container py-5">
             <div class="section-header text-center mb-5">
                 <h4 class="text-primary fw-bold">Our Events</h4>
@@ -691,12 +691,7 @@
 
                 <div class="col-sm-4">
                     <h6>Great Speaker</h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae temporibus, blanditiis
-                        facilis eum quae, asperiores iusto deserunt eaque dolorem voluptate delectus libero saepe non
-                        obcaecati veniam, vel tempore quia reiciendis? <br><br>Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Similique voluptatibus est doloribus vero sapiente, tempora voluptate autem
-                        deserunt perspiciatis accusamus nam dignissimos laboriosam atque recusandae quibusdam ullam
-                        numquam eligendi voluptatem?</p>
+                    <p></p>
                     <a href="#">Learn More</a>
                 </div>
 
