--- a/event.html
+++ b/event.html
@@ -235,18 +235,6 @@
                 <p class="lead">Stay connected, stay inspired — participate, learn, grow.</p>
             </div>
 
-            <!-- Event Categories Tabs -->
-            <ul class="nav nav-pills mb-4 justify-content-center" id="events-tab" role="tablist">
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="upcoming-tab" data-bs-toggle="pill" data-bs-target="#upcoming"
-                        type="button" role="tab">Upcoming Events</button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="past-tab" data-bs-toggle="pill" data-bs-target="#past" type="button"
-                        role="tab">Past Events</button>
-                </li>
-            </ul>
-
             <div class="tab-content" id="events-tabContent">
 
                 <!-- Upcoming Events -->
@@ -262,9 +250,8 @@
                                     <!-- <video src="video/event-video.mp4" autoplay muted loop class="w-100"></video> -->
                                 </div>
                                 <div class="p-4 flex-grow-1 d-flex flex-column">
-                                    <h5 class="mb-3">Career Pathways Expo 2025</h5>
-                                    <p class="text-muted small mb-3">Prepare for your dream university journey. Meet
-                                        experts, explore opportunities!</p>
+                                    <h5 class="mb-3">Internatianal Students Pre-registration</h5>
+                                    <p class="text-muted small mb-3"></p>
                                     <div class="mb-3">
                                         <strong>Speaker:</strong> Dr. Emily Banda<br>
                                         <strong>Location:</strong> Bingu International Convention Centre
@@ -274,7 +261,7 @@
                                             data-bs-target="#eventDetailModal">View More</button>
                                         <button class="btn btn-outline-success btn-sm" data-bs-toggle="modal"
                                             data-bs-target="#applyModal">Attend</button>
-                                    </div>
+                                    </div>      
                                 </div>
                             </div>
                         </div>
@@ -548,7 +535,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <p>Deep explanation about the event...</p>
+                    <p></p>
                     <a href="#" class="btn btn-primary mt-3">Visit Related Post</a>
                 </div>
             </div>
