--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@
     <div id="popupContainer" class="popup-overlay" onclick="popup">
         <div class="popup-box">
             <div class="flip-card" id="flipCard">
-                 LOGIN FORM 
-                 
+                LOGIN FORM 
+                
                 <div class="flip-face front">
                     <h2>Login</h2>
                     <form action="login.php" method="POST">
@@ -1006,7 +1006,7 @@
                         <p onclick="flipCard()" class="switch-text">Don’t have an account? Register</p>
                     </form>
                 </div>
-                 REGISTER FORM
+                REGISTER FORM
                 <div class="flip-face back">
                     <h2>Register</h2>
                     <form action="register.php" method="POST">
@@ -1030,77 +1030,44 @@
     ---->
 
     <div id="faqModal" class="faq-modal">
-        <div class="faq-content">
-            <span class="close-btn">&times;</span>
-            <h2>Frequently Asked Questions</h2>
-
-            <button class="accordion" aria-expanded="false" aria-controls="panel1">Question</button>
-            <div id="panel1" role="region" aria-hidden="true">Answer</div>
-
-            <button class="accordion">What services does Mtendere Education Consult provide?</button>
+        <div class="modal-content">
+            <h1>Frequently Asked Questions</h1>
+            <button class="accordion">What is Mtendere Education Consult?</button>
             <div class="panel">
-                <p>We assist students in securing international university placements, provide scholarship guidance,
-                    career consulting, and pre-departure orientation.</p>
+                <p>Mtendere Education Consult is a leading provider of online education solutions for Malawi.
+                    Our mission is to help students achieve their dreams and achieve success in their education journey.</p>
+                <p>Our team of dedicated professionals and students work together to create a comprehensive
+                    and engaging learning experience for our students.</p>
+                <!--- find the link --->
+                <a href="https://www.mtendere.com/" target="_blank">Visit our website</a>
             </div>
-
-            <button class="accordion">How can I apply for a scholarship?</button>
+            <button class="accordion">What are the benefits of working with Mtendere Education Consult?</button>
             <div class="panel">
-                <p>You can apply through our unified application portal. Make sure to upload all required documents such
-                    as transcripts, CV, and identification documents.</p>
+                <p>Working with Mtendere Education Consult offers several benefits for both students and their
+                    parents:</p>
+                <ul>
+                    <li>Access to top-notch education resources and support</li>
+                    <li>Flexible scheduling and time management</li>
+                    <li>High-quality learning environment</li>
+                    <li>Personalized learning plans and progress tracking</li>
+                    <li>Student counseling and mentorship</li>
+                    <li>Parent and guardian support</li>
+                    <li>Affordable tuition and fees</li>
+                    <li>Transparent communication and accountability</li>
+                </ul>
             </div>
-
-            <button class="accordion">What are the entry requirements for partner universities?</button>
+            <button class="accordion">How can I get started with Mtendere Education Consult?</button>
             <div class="panel">
-                <p>Entry requirements vary depending on the university and program. Generally, you’ll need academic
-                    transcripts, proof of English proficiency, and a valid passport.</p>
+                <p>To get started with Mtendere Education Consult, you can follow these steps:</p>
+                <ol>
+                    <li>Fill out a free application form online: <a href="https://www.mtendere.com/apply-online"
+                            target="_blank">https://www.mtendere.com/apply-online</a></li>
+                    <li>Submit your application to our admissions team</li>
+                    <li>Receive a confirmation email from Mtendere Education Consult</li>
+                    <li>Schedule a consultation with our admissions team</li>
+                    <li>Start your education journey with Mtendere Education Consult</li>
+                </ol>
             </div>
-
-            <button class="accordion">Can I apply to more than one university?</button>
-            <div class="panel">
-                <p>Yes. Our system allows you to choose and submit applications to multiple partner universities within
-                    a single form.</p>
-            </div>
-
-            <button class="accordion">When are the intakes?</button>
-            <div class="panel">
-                <p>Most of our universities offer intakes in January, July, and September. Check the specific university
-                    page for details.</p>
-            </div>
-
-            <button class="accordion">Is Mtendere Education Consult affiliated with universities?</button>
-            <div class="panel">
-                <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
-                    University, Jain University, and more.</p>
-            </div>
-
-            <button class="accordion">What is the process for submitting an application?</button>
-            <div class="panel">
-                <p>Submit your application through our unified application portal. Make sure to upload all required
-                    documents
-                    such as transcripts, CV, and identification documents.</p>
-                <p>Your application will be reviewed by our team and you will be notified if your application is
-                    selected
-                    for further processing.</p>
-                <p>If your application is selected, we will contact you for further details.</p>
-            </div>
-
-            <button class="accordion">How can I contact Mtendere Education Consult?</button>
-            <div class="panel">
-                <p>You can reach us through our website contact form, email us at
-                    <a href="mailto:info@mtendereeducationconsult.com">info@mtendereeducationconsult.com</a>.
-                </p>
-                <p>You can also reach us through our social media channels, such as Facebook, Twitter, and LinkedIn.</p>
-            </div>
-
-            <button class="accordion">What are the payment options for tuition fees?</button>
-            <div class="panel">
-                <p>Payment options vary by university. Most accept bank transfers, credit cards, and some offer
-                    installment plans. Check with the specific university for details.</p>
-                <p>Please note that you will need to provide proof of payment (e.g., bank statement, cheque) if you
-                    choose to
-                    pay by bank transfer.</p>
-            </div>
-
         </div>
     </div>
 
