--- a/event.html
+++ b/event.html
@@ -243,18 +243,25 @@
 
                         <!-- Single Event Card -->
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
                                     <!-- <video src="video/event-video.mp4" autoplay muted loop class="w-100"></video> -->
                                 </div>
                                 <div class="p-4 flex-grow-1 d-flex flex-column">
-                                    <h5 class="mb-3">Internatianal Students Pre-registration</h5>
-                                    <p class="text-muted small mb-3"></p>
+                                    <h5 class="mb-3">
+                                        <strong>Event Title:</strong> Career Talk 
+                                    </h5>
+                                    <p class="text-muted small mb-3">
+                                        <!--- Career Talk---->
+                                        <!-- Explain why the event is important and why it's happening -->
+                                        A career talk is an opportunity for students to engage with educational advisors and professionals in their field.
+
+                                    </p>
                                     <div class="mb-3">
                                         <strong>Speaker:</strong> Dr. Emily Banda<br>
-                                        <strong>Location:</strong> Bingu International Convention Centre
+                                        <strong>Location:</strong> Bambino Schools
                                     </div>
                                     <div class="mt-auto d-flex justify-content-between">
                                         <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
@@ -269,7 +276,7 @@
 
                         <!-- More Event Cards dynamically populated here -->
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
@@ -294,7 +301,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
@@ -319,7 +326,34 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
+                                <div class="event-media position-relative">
+                                    <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
+                                    <!-- Or if video -->
+                                    <!-- <video src="video/event-video.mp4" autoplay muted loop class="w-100"></video> -->
+                                </div>
+                                <div class="p-4 flex-grow-1 d-flex flex-column">
+                                    <h5 class="mb-3">
+                                
+                                    </h5>
+                                    <p class="text-muted small mb-3">Prepare for your dream university journey. Meet
+                                        experts, explore opportunities!</p>
+                                    <div class="mb-3">
+                                        <strong>Speaker:</strong> Dr. Emily Banda<br>
+                                        <strong>Location:</strong> Bingu International Convention Centre
+                                    </div>
+                                    <div class="mt-auto d-flex justify-content-between">
+                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#eventDetailModal">View More</button>
+                                        <button class="btn btn-outline-success btn-sm" data-bs-toggle="modal"
+                                            data-bs-target="#applyModal">Attend</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6 col-lg-4">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
@@ -344,7 +378,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
@@ -369,7 +403,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
                                     <!-- Or if video -->
@@ -394,32 +428,7 @@
                         </div>
 
                         <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
-                                <div class="event-media position-relative">
-                                    <img src="assets/imgs/Events.jpg" class="img-fluid w-100" alt="Event Image">
-                                    <!-- Or if video -->
-                                    <!-- <video src="video/event-video.mp4" autoplay muted loop class="w-100"></video> -->
-                                </div>
-                                <div class="p-4 flex-grow-1 d-flex flex-column">
-                                    <h5 class="mb-3">Career Pathways Expo 2025</h5>
-                                    <p class="text-muted small mb-3">Prepare for your dream university journey. Meet
-                                        experts, explore opportunities!</p>
-                                    <div class="mb-3">
-                                        <strong>Speaker:</strong> Dr. Emily Banda<br>
-                                        <strong>Location:</strong> Bingu International Convention Centre
-                                    </div>
-                                    <div class="mt-auto d-flex justify-content-between">
-                                        <button class="btn btn-primary btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#eventDetailModal">View More</button>
-                                        <button class="btn btn-outline-success btn-sm" data-bs-toggle="modal"
-                                            data-bs-target="#applyModal">Attend</button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-6 col-lg-4">
-                            <div class="event-card bg-white shadow rounded overflow-hidden h-100 d-flex flex-column">
+                            <div class="event-card shadow rounded overflow-hidden h-100 d-flex flex-column">
                                 <div class="event-media position-relative">
                                     <!-- Or if video -->
                                     <video src="video/event-video.mp4" autoplay muted loop class="w-100"></video>
