--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,7 @@
     </div>
     ---->
 
-    <div id="faqModal" class="faq-modal">
+    <div id="modal" class="modal">
         <div class="modal-content">
             <h1>Frequently Asked Questions</h1>
             <button class="accordion">What is Mtendere Education Consult?</button>
