--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="col-md-8 d-flex">
-                    <a href="#faqModal" class="small me-4" data-bs-toggle="modal">
+                    <a href="#modal" class="small me-4" data-bs-toggle="modal">
                         <i class="fa fa-question-circle me-1"></i> Have a Question?
                     </a>
                     <a href="tel:+265999360325" class="small text-dark me-4">
