--- a/index.html
+++ b/index.html
@@ -308,7 +308,6 @@
             </div>
         </div>
     </div>
-    </div>
 
     <div class="services-section">
         <div class="container">
@@ -523,7 +522,7 @@
                                         MBBS</span></div>
                                 <div class="review"><span class="icon-star text-warning"></span> <span>4.9</span></div>
                             </div>
-                            <h4 class="font-weight-bold">MBBS – Full & Partial Scholarships</h4>
+                            <h5 class="font-weight-bold">MBBS – Full & Partial Scholarships</h5>
                             <p>Study Medicine in India, Russia, or Turkey. Scholarships cover up to 70% of tuition.
                                 Partnered with top medical universities with global licensure support.</p>
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
@@ -547,7 +546,7 @@
                                         BEng</span></div>
                                 <div class="review"><span class="icon-star text-warning"></span> <span>4.7</span></div>
                             </div>
-                            <h4 class="font-weight-bold">Engineering Degrees – 50% Merit Scholarships</h4>
+                            <h5 class="font-weight-bold">Engineering Degrees – 50% Merit Scholarships</h5>
                             <p>Join tech-focused campuses in Malaysia, UAE, or Poland. Scholarships based on academic
                                 excellence & motivation letters. Strong internship support.</p>
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
@@ -572,7 +571,7 @@
                                         BBA</span></div>
                                 <div class="review"><span class="icon-star text-warning"></span> <span>4.8</span></div>
                             </div>
-                            <h4 class="font-weight-bold">Business & Management – Guaranteed Entry + Support</h4>
+                            <h5 class="font-weight-bold">Business & Management – Guaranteed Entry + Support</h5>
                             <p>Affordable degrees in Canada & UK with pathway programs and 40% fee reductions. English
                                 support, visa training, and financial planning included.</p>
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
@@ -596,7 +595,7 @@
                                         BSc</span></div>
                                 <div class="review"><span class="icon-star text-warning"></span> <span>4.6</span></div>
                             </div>
-                            <h4 class="font-weight-bold">IT & Computer Science – 30% Scholarships</h4>
+                            <h5 class="font-weight-bold">IT & Computer Science – 30% Scholarships</h5>
                             <p>Study in the UK, USA, or Australia with scholarships based on academic performance.
                                 Internship opportunities and career support included.</p>
                             <div class="border-top d-flex justify-content-between pt-3 mt-3 align-items-center">
@@ -611,7 +610,7 @@
                 </div>
             </div>
             <div class="text-center mt-5">
-                <a href="service.html" class="btn btn-primary btn-lg">View all programs</a>
+                <a href="course.html" class="btn btn-primary btn-lg">View all programs</a>
             </div>
         </div>
     </div>
@@ -636,10 +635,7 @@
                 </div>
                 <div class="col-lg-7 ml-auto" data-aos="fade-up" data-aos-delay="100">
                     <p>Mtendere Education Consult empowers students with trusted, transparent guidance to access top
-                        global
-                        universities.<br>
-                        We simplify your journey through personalized support, scholarships, and end-to-end admission
-                        services. </p>
+                        global universities. </p>
 
                     <div class="custom-accordion" id="accordion_1">
                         <div class="accordion-item">
@@ -659,11 +655,6 @@
                                         <div>
                                             <p>Profession tutors are not only skilled in their subjects but also
                                                 understand the unique challenges faced by international students.
-                                            </p>
-                                            </p>
-                                            <p>
-                                                Our tutors are not just educators; they are mentors who inspire and
-                                                motivate students to reach their full potential.</p>
                                             </p>
                                         </div>
                                     </div>
@@ -688,10 +679,6 @@
                                         <p class="mb-4 pb-2">Good characters are essential for success in any field.
                                             They help students build strong relationships, communicate effectively, and
                                             navigate challenges with resilience and integrity.
-                                        </p>
-                                        <p>We believe that education is not just about acquiring knowledge; it's also
-                                            about developing the skills and values that will help students succeed in
-                                            life.
                                         </p>
                                         <div>
                                             <div class="col-lg-5" style="min-height: 500px;">
@@ -1071,7 +1058,7 @@
         </div>
     </div>
 
-    <div id="formModal">
+    <div id="modal">
         <div class="modal-content">
             <span id="closeFormBtn">&times;</span>
             <h1>Apply to Partner Universities</h1>
